--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
