succes-register/login/forgot

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VITE_BACKEND_URL=https://backluna.vercel.app/
+VITE_BACKEND_URL=http://localhost:3000/
+
+
+VITE_BACKEND=https://backluna.vercel.app/
