--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
